# open5gs

./: .gitignore  kill.sh  kill_script.sh  meson.build  meson_options.txt  mylog.txt  rebuild.sh  run_script.sh  udr_gramine.sh
configs/: meson.build  sample.yaml.in  sample_nf.yaml.in
configs/open5gs/: lmf.yaml.in  maf.yaml.in  meson.build  tdf.yaml.in
lib/: meson.build
lib/app/: ogs-app.h  ogs-config.c  ogs-config.h  ogs-context.h
lib/asn1c/: meson generator.py  meson.build
lib/asn1c/common/: asn_internal.h  asn_system.h  constr_TYPE.c  meson.build
lib/asn1c/lpp/: meson.build
lib/asn1c/ngap/: meson.build
lib/asn1c/util/: conv.c  conv.h  meson.build  message.c  message.h
lib/core/: meson.build  ogs-abort.c  ogs-compat.h  ogs-conv.c  ogs-core.c  ogs-core.h  ogs-env.c  ogs-epoll.c  ogs-errno.c  ogs-fsm.c  ogs-hash.c  ogs-kqueue.c  ogs-log.c  ogs-log.h  ogs-macros.h  ogs-memory.c  ogs-memory.h  ogs-notify.c  ogs-pkbuf.c  ogs-pkbuf.h  ogs-poll.c  ogs-poll.h  ogs-process.h  ogs-rand.c  ogs-select.c  ogs-signal.c  ogs-sockaddr.c  ogs-socket.c  ogs-socket.h  ogs-socknode.c  ogs-socknode.h  ogs-sockopt.c  ogs-strings.c  ogs-strings.h  ogs-thread.h  ogs-uuid.c
lib/dbi/: subscription.c
lib/lpp/: meson.build
lib/ngap/: meson.build  message.c  ogs-ngap.h
lib/proto/: event.h  types.h
lib/sbi/: client.c  context.c  message.c  message.h  nghttp2-server.c  ogs-sbi.h  path.c  server.c  timer.c  types.c  types.h
lib/sbi/openapi/: CMakeLists.txt  README.md  meson.build
lib/sbi/openapi/.openapi-generator/: FILES
lib/sbi/openapi/api/: CancelLocationAPI.c  CancelLocationAPI.h  DetermineLocationAPI.c  DetermineLocationAPI.h  LocationContextTransferAPI.c  LocationContextTransferAPI.h
lib/sbi/openapi/model/: accuracy_fulfilment_indicator.c  accuracy_fulfilment_indicator.h  area_event_info.c  area_event_info.h  ausf_ue.c  ausf_ue.h  event_class.c  event_class.h  event_notify_data.c  event_notify_data.h  event_report_message.c  event_report_message.h  external_client_type.h  gnss_id.c  gnss_id.h  gnss_positioning_method_and_usage.c  gnss_positioning_method_and_usage.h  input_data.c  input_data.h  lcs_priority.c  lcs_priority.h  lcs_qos_class.h  ldr_type.c  ldr_type.h  loc_context_data.c  loc_context_data.h  local_area.c  local_area.h  location_data.c  location_data.h  location_qo_s.c  location_qo_s.h  motion_event_info.c  motion_event_info.h  nf_type.c  nf_type.h  occurrence_info.c  occurrence_info.h  positioning_method.c  positioning_method.h  (+31 more)
lib/sbi/openapi/src/: apiClient.c
lib/sbi/support/r17-20230301-openapitools-6.4.0/: generator.sh
lib/sbi/support/r17-20230301-openapitools-6.4.0/modified/: TS29572_Nlmf_Location.yaml
lib/sctp/: meson.build  ogs-lksctp.c  ogs-sctp.c
src/: meson.build
src/amf/: amf-sm.c  app.c  context.c  context.h  enclave_api.c  enclave_api.h  event.c  event.h  gmm-build.c  gmm-handler.c  gmm-sm.c  init.c  meson.build  nausf-handler.c  ngap-handler.c  ngap-path.c  ngap-sctp.c  ngap-sm.c  nsmf-build.c  sbi-path.c  timer.c  timer.h
src/amf/trusted/: Enclave.c  Enclave.edl  Enclave.h  Ocall_wrappers.cpp  Ocall_wrappers.h  anonymizer.cpp  anonymizer.h  enclave_amf.cpp  enclave_amf.edl  enclave_amf.h  meson.build
src/amf/trusted/Edger8rSyntax/: Pointers.cpp
src/amf/untrusted/: amf-sm.c  app.c  context.c  meson.build  ngap-handler.c  ngap-sctp.c  sgx_api.c  sgx_api.h
src/amf/untrusted/sgx/: App.c  App.h  Ocall_implements.cpp  meson.build
src/ausf/: ausf-sm.c  context.c  meson.build  ntdf-handler.c  ntdf-handler.h  nudm-handler.c  sbi-path.c  ue-sm.c
src/lmf/: app.c  context.c  context.h  event.c  event.h  init.c  lmf-sm.c  lmf-sm.h  meson.build  nlmf-handler.c  nlmf-handler.h  sbi-path.c  sbi-path.h
src/maf/: app.c  context.c  context.h  enclave_api.c  enclave_api.h  event.c  event.h  init.c  maf-sm.c  maf-sm.h  meson.build  nmaf-handler.c  nmaf-handler.h  sbi-path.c  sbi-path.h
src/maf/trusted/: enclave_maf.cpp  enclave_maf.edl  enclave_maf.h  meson.build
src/nrf/: nf-sm.c  nrf-sm.c  timer.c
src/pcf/: pcf-sm.c
src/scp/: init.c  sbi-path.c  scp-sm.c
src/smf/: context.c  context.h  meson.build  namf-handler.c  ngap-handler.c  npcf-build.c  nsmf-handler.c  ntdf-handler.c  ntdf-handler.h  pfcp-sm.c  sbi-path.c  smf-sm.c
src/tdf/: app.c  context.c  context.h  event.c  event.h  init.c  meson.build  nausf-build.c  nausf-build.h  nlmf-build.c  nlmf-build.h  nsmf-build.c  nsmf-build.h  ntdf-handler.c  ntdf-handler.h  nudm-build.c  nudm-build.h  sbi-path.c  sbi-path.h  tdf-sm.c  tdf-sm.h
src/tgf/: Enclave_c.h  Enclave_u.h  app.c  context.c  context.h  event.c  event.h  init.c  meson.build  nnrf-handler.c  nnrf-handler.h  ntgf-handler.c  ntgf-handler.h  nudr-build.c  nudr-build.h  nudr-handler.c  nudr-handler.h  sbi-path.c  sbi-path.h  sess-sm.c  tgf-sm.c  tgf-sm.h  ue-sm.c
src/tgf/App/: App.c  App.h
src/tgf/Enclave/: Enclave.c  Enclave.edl
src/udm/: context.c  ntdf-handler.c  ntdf-handler.h  nudr-handler.c  sbi-path.c  udm-sm.c  ue-sm.c
src/udr/: nudr-handler.c  udr-sm.c  udr.manifest.template
src/upf/: context.h  pfcp-sm.c  upf-sm.c
tests/: meson.build
tests/app/: 5gc-init.c  app-init.c
tests/common/: application.c  application.h  gmm-build.c  gmm-handler.c  meson.build  nas-path.c  ngap-handler.c  ngap-path.c  sctp.c
tests/nf/: abts-main.c  meson.build  simple-test.c
tests/registration/: abts-main.c  ad-test.c  identity-test.c  lpp-test.c  meson.build
